--- a/microservices/app/src/templates/group_detail.html
+++ b/microservices/app/src/templates/group_detail.html
@@ -337,7 +337,7 @@ button
                       <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspYou owe
                           &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </th><th>|   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp You owed
                   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </th><th>|    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp    Your total paid&nbsp&nbsp
-                  &nbsp&nbsp</th><td rowspan="2" bgcolor="#ffb3b3"><button class="button">Settle Up</button></td><td rowspan="2" bgcolor="#ffb3b3">
+                  &nbsp&nbsp</th><td rowspan="2" bgcolor="#ffb3b3"><button class="button"><a href="https://app.octagon58.hasura-app.io/settle_up_group?gid={{gid}}" style="color:white; text-decoration:none;">Settle Up</a></button></td><td rowspan="2" bgcolor="#ffb3b3">
                   <button class="button" >Print</button></td><td rowspan="2" bgcolor="#ffb3b3"><button class="button" ><a href="https://app.octagon58.hasura-app.io/send_remind_group?gid={{gid}}" style="color:white; text-decoration:none;">Send Reminder</a></button></td>
                    {% endfor%}{%for i in result2%}
                   </tr><tr bgcolor="yellow">
