--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -316,7 +316,7 @@ li a:hover {
       <div class="x">
         <button class="button button3">DASHBOARD</button>  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp<button type="button" class="button button2" data-toggle="modal" data-target="#myModal2"><a href="#" style="text-decoration:none; color:white;">ADD BILL</a></button> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp<button class="button button2"><a href="#" style="text-decoration:none; color:white;">Split Bill</a></button>
         <hr>
-        <b> YOUR WALLLET BALANCE:: &nbsp &nbsp &nbsp &nbsp &nbsp <b>Rs. 00</b></b>
+          <button class="button button3"><a href="https://app.octagon58.hasura-app.io/refresh" style="text-decoration:none; color=white">REFRESH</a></button>
         <hr>
         </div>
 
