--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -315,6 +315,7 @@ li a:hover {
 
       <div class="x">
         <button class="button button3">DASHBOARD</button>  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp<button type="button" class="button button2" data-toggle="modal" data-target="#myModal2"><a href="#" style="text-decoration:none; color:white;">ADD BILL</a></button> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp<button class="button button2"><a href="https://app.octagon58.hasura-app.io/refresh" style="text-decoration:none; color:white;">&nbspREFRESH&nbsp</a></button>
+          &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp<button type="button" class="button button2" data-toggle="modal" data-target="#myModal1">+Add Group</button>
 
         </div>
 
