--- a/microservices/app/src/templates/invite_friend.html
+++ b/microservices/app/src/templates/invite_friend.html
@@ -331,7 +331,7 @@ button
           <div class="col-sm-8 text-left">
 
               <br><br>
-              <form action="https://app.octagon58.hasura.app.io/invite_sent" method="POST">
+              <form action="https://app.octagon58.hasura-app.io/invite_sent" method="POST">
               Enter Email: <input type="email" name="email" required>
               <br><input type="submit" value="Invite this mail">
 
