--- a/microservices/app/src/templates/group_icon_change.html
+++ b/microservices/app/src/templates/group_icon_change.html
@@ -203,10 +203,9 @@ li a:hover {
   <div class="row content">
     <div class="col-sm-2 sidenav">
 
-      <ul>
-  <li><a href="#home">Dashboard</a></li>
-  <li><a href="#news">Transactions</a></li>
-  <li><a href="#contact">Invite friend</a></li>
+      <ul><li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
+
+  <li><a href="https://app.octagon58.hasura-app.io/invite_friend">Invite friend</a></li>
 </ul>
       </ul>
        <div ><br>
