--- a/microservices/app/src/templates/update_mobile.html
+++ b/microservices/app/src/templates/update_mobile.html
@@ -255,9 +255,9 @@ input[type=email]:focus {
     <div class="col-sm-2 sidenav">
 
       <ul>
-  <li><a href="#home">Dashboard</a></li>
-  <li><a href="#news">Transactions</a></li>
-  <li><a href="#contact">Invite friend</a></li>
+  <li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
+
+  <li><a href="https://app.octagon58.hasura-app.io/invite_friend">Invite friend</a></li>
 </ul>
        <div >
         <button id="myBtn1">+Add Group</button><h4><u><i class="fa fa-group"></i> </i>My Groups</u></h4>
