--- a/microservices/app/src/templates/group_detail.html
+++ b/microservices/app/src/templates/group_detail.html
@@ -221,10 +221,9 @@ button
     <div class="col-sm-2 sidenav">
 
       <ul>
-  <li><a href="#home">Dashboard</a></li>
-  <li><a href="#news">Transactions</a></li>
-  <li><a href="#contact">Invite friend</a></li>
-</ul>
+  <li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
+
+  <li><a href="https://app.octagon58.hasura-app.io/invite_friend">Invite friend</a></li></ul>
       </ul>
        <div ><br>
         <button type="button" data-toggle="modal" data-target="#myModal1">+Add Group</button><h4><u><i class="fa fa-group"></i> </i>My Groups</u></h4>
