--- a/microservices/app/src/templates/remind_member.html
+++ b/microservices/app/src/templates/remind_member.html
@@ -221,9 +221,9 @@ button
     <div class="col-sm-2 sidenav">
 
       <ul>
-  <li><a href="#home">Dashboard</a></li>
-  <li><a href="#news">Transactions</a></li>
-  <li><a href="#contact">Invite friend</a></li>
+  <li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
+
+  <li><a href="https://app.octagon58.hasura-app.io/invite_friend">Invite friend</a></li>
 </ul>
       </ul>
        <div ><br>
