--- a/microservices/app/src/templates/update_email.html
+++ b/microservices/app/src/templates/update_email.html
@@ -386,9 +386,8 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
-    }
+        "Content-Type": "application/json"
+            }
 };
 
 var body = {
@@ -439,8 +438,7 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
@@ -491,8 +489,7 @@ fetch(url, requestOptions)
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
