--- a/microservices/app/src/templates/update_profile.html
+++ b/microservices/app/src/templates/update_profile.html
@@ -396,9 +396,8 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
-    }
+        "Content-Type": "application/json"
+            }
 };
 
 var body = {
@@ -449,8 +448,7 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
@@ -501,9 +499,8 @@ fetch(url, requestOptions)
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
-    }
+        "Content-Type": "application/json"
+            }
 };
 
 var body = {
