--- a/microservices/app/src/templates/group_detail.html
+++ b/microservices/app/src/templates/group_detail.html
@@ -465,9 +465,8 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
-    }
+        "Content-Type": "application/json"
+        }
 };
 
 var body = {
@@ -518,8 +517,7 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
@@ -570,8 +568,7 @@ fetch(url, requestOptions)
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
