--- a/microservices/app/src/templates/invite_friend.html
+++ b/microservices/app/src/templates/invite_friend.html
@@ -372,8 +372,7 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
@@ -425,8 +424,7 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
@@ -477,8 +475,7 @@ fetch(url, requestOptions)
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
