--- a/microservices/app/src/templates/update_password.html
+++ b/microservices/app/src/templates/update_password.html
@@ -389,9 +389,8 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
-    }
+        "Content-Type": "application/json"
+        }
 };
 
 var body = {
@@ -442,8 +441,7 @@ var url = "https://data.octagon58.hasura-app.io/v1/query";
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
@@ -494,8 +492,7 @@ fetch(url, requestOptions)
 var requestOptions = {
     "method": "POST",
     "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
+        "Content-Type": "application/json"
     }
 };
 
